--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -39,9 +39,16 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
   </section>
   <section>
     <h2>Adage Experiment</h2>
-
-    <p id="adage">Loading...</p>
-
+    <div class="epigraph">
+      <blockquote>
+        <p id="adage">
+          The English language . . . becomes ugly and inaccurate because our
+          thoughts are foolish, but the slovenliness of our language makes it
+          easier for us to have foolish thoughts.
+        </p>
+        <footer><span id="attribution"></span></footer>
+      </blockquote>
+    </div>
     <script>
       async function fetchRandomAdage() {
         const githubApiUrl =
@@ -76,13 +83,13 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
 
           const match = randomAdage.match(/^(.*?)(?:\s*–\s*(.*))?$/);
           const adage = match ? match[1].trim() : randomAdage;
-          const attribution = match && match[2] ? match[2].trim() : null;
+          const attribution = match && match[2] ? match[2].trim() : "";
 
           const formattedAdage = adage.replace(/\n/g, "<br>");
           const adageElement = document.getElementById("adage")!;
-          adageElement.innerHTML = attribution
-            ? `${formattedAdage}<br><i>— ${attribution}</i>`
-            : formattedAdage;
+          adageElement.innerHTML = formattedAdage;
+          const attributionElement = document.getElementById("attribution")!;
+          attributionElement.innerHTML = attribution;
         } catch (error) {
           console.error("Error fetching adage:", error);
           document.getElementById("adage")!.textContent =
