--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -51,7 +51,7 @@ const { current = "" } = Astro.props;
 */
 </style>
 <nav>
-  <a href="https://github.com/goude/goude.github.io">README</a>
+  <a class={current === "readme" ? "selected" : ""} href="/README">README</a>
   <a class={current === "about" ? "selected" : ""} href="/about">about</a>
   <a class={current === "blog" ? "selected" : ""} href="/blog">blog</a>
 </nav>
